# health_backend

./: .gitignore  CMakeLists.txt  README.md  backend_app  main.cpp  server.cpp
.github/workflows/: ci.yml
backend/: HealthBackend.cpp  HealthBackend.hpp
helpers/: validation.cpp  validation.hpp
include/core/: HealthBackend.hpp  Storage.hpp
include/routes/: ActivityRoutes.hpp  AuthRoutes.hpp  CategoryRoutes.hpp  HealthRoutes.hpp  Helpers.hpp  Routes.hpp  SleepRoutes.hpp  UserRoutes.hpp  WaterRoutes.hpp
include/server/: ServerSetup.hpp
records/: Activity.cpp  Activity.hpp  OtherCategory.cpp  OtherCategory.hpp  Sleep.cpp  Sleep.hpp  Water.cpp  Water.hpp
src/: main.cpp  server.cpp  server_utils.cpp  server_utils.hpp
src/backend/: HealthBackend.cpp  HealthBackend.hpp  HealthStorage.cpp  HealthStorage.hpp
src/core/: HealthBackend.cpp  Storage.cpp
src/helpers/: Logger.cpp  Logger.hpp
src/routes/: ActivityRoutes.cpp  AuthRoutes.cpp  CategoryRoutes.cpp  HealthRoutes.cpp  RegisterRoutes.cpp  SleepRoutes.cpp  UserRoutes.cpp  WaterRoutes.cpp  activities_routes.cpp  activities_routes.hpp  auth_routes.cpp  auth_routes.hpp  categories_routes.cpp  categories_routes.hpp  sleeps_routes.cpp  sleeps_routes.hpp  waters_routes.cpp  waters_routes.hpp
src/server/: ServerSetup.cpp
src/utils/: Logger.cpp
user/: User.cpp  User.hpp  UserBackend.cpp  UserBackend.hpp
